Rendering update steps should use Seconds for the timestamps https://bugs.webkit.org/show_bug.cgi?id=210990

Unreviewed.

serviceRequestAnimationFrameCallbacks() should return rounded milliseconds.
This rounding was removed in r260736. So put it back.

* dom/ScriptedAnimationController.cpp:
(WebCore::ScriptedAnimationController::serviceRequestAnimationFrameCallbacks):


Canonical link: https://commits.webkit.org/224063@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260870 268f45cc-cd09-0410-ab3c-d52691b4dbfc